# remeres-map-editor-linux

./: BUILDING.md  CHANGELOG.md  DISCORD_ANNOUNCEMENT.md  DISCORD_POST_SHORT.md  imgui.ini  populate_sparse_tilesets.py  vcpkg.json
_bmad-output/: architecture.md  bmm-workflow-status.yaml  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
_bmad-output/archive/20251229_234012/docs/architecture/: ARCHITECTURAL_SYNTHESIS.md  ARCHITECTURE.md  FPS_TELEMETRY_ANALYSIS.md
_bmad-output/archive/20251229_234012/docs/border_editor_interface/: structure_audit.md
_bmad-output/archive/20251229_234012/docs/dev-notes/: COMO_CONVERTER_IMAGEM_PARA_ICONE.md  ICON_LINUX_IMPLEMENTATION.md  MODAL_TRANSITION_OPTIMIZATION.md
_bmad-output/archive/20251229_234012/docs/dev-notes/archive/: PROCEDURAL_MAP_GENERATION_HANDOFF.md  PROCEDURAL_MAP_GENERATION_VERIFICATION_HANDOFF.md
_bmad-output/archive/20251229_234012/docs/features/: AUTO_BORDER_EDITOR_RESEARCH.md  PROCEDURAL_MAP_GENERATION_ARCHITECTURE.md  PROCEDURAL_MAP_GENERATION_GAP_ANALYSIS.md  PROCEDURAL_MAP_GENERATION_REPORT.md  PROCEDURAL_MAP_GENERATION_TODO.md
_bmad-output/archive/20251229_234012/docs/features/auto_border_editor/: border_editor_audit_for_ai.md  redesign_proposal_v2.md  system_architecture.md  ui_wireframe.md
_bmad-output/archive/20251229_234012/docs/features/palette_xml_structures/: deep_dive_structures.md  palette_structure_analysis.md  reference_examples.md
_bmad-output/archive/20251229_234012/docs/linux-port/: LINUX_PORT_AUDIT.md  TECHNICAL_REPORT.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
data/creatures/: monsters.xml  npcs.xml
data/materials/: tilesets.xml
data/materials/borders/: borders.xml
data/materials/brushs/: grounds.xml
data/materials/tilesets/: animals.xml  architecture_parts.xml  constructions.xml  corpses.xml  decor_rewards.xml  decorations.xml  gamestore_furniture.xml  grass.xml  interior.xml  kitchen.xml  musical_instruments.xml  natural_products.xml  nature_details.xml  nature_flora.xml  quests_magic.xml  refuse.xml  remains.xml  rocks.xml  rubbish.xml  skulls_bones.xml  snow.xml  trash.xml
docs/border_editor_interface/: development_learnings.md  technical_refactoring_blueprint.md
docs/features/: ASSET_ARCHITECT_DESIGN.md  AUTO_BORDER_EDITOR_HANDOFF.md
docs/features/auto_border_editor/: border_parameters.md
source/: CMakeLists.txt  application.cpp  border_editor_window.cpp  border_editor_window.h  brush.h  common_windows.cpp  definitions.h  doodad_brush.h  ear_control.cpp  ear_control.h  editor_tabs.cpp  graphics.cpp  graphics.h  gui.cpp  gui_ids.h  imgui_impl_wx.cpp  imgui_impl_wx.h  imgui_panels.cpp  imgui_panels.h  items.cpp  items.h  main_menubar.cpp  main_menubar.h  map_display.cpp  map_display.h  map_drawer.cpp  monster_brush.h  npc_brush.h  old_properties_window.cpp  palette_brushlist.cpp  palette_brushlist.h  palette_common.cpp  palette_common.h  palette_house.cpp  palette_house.h  palette_monster.cpp  palette_monster.h  palette_npc.cpp  palette_npc.h  palette_view.cpp  (+8 more)
source/protobuf/: CMakeLists.txt
